Backend 2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RCONCAT
    RSPLIT

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir PTCOMA
Rule 5     instruccion -> declaracion_normal PTCOMA
Rule 6     instruccion -> condicional_ifs PTCOMA
Rule 7     instruccion -> ciclo_for PTCOMA
Rule 8     instruccion -> funcion PTCOMA
Rule 9     instruccion -> llamada_funcion PTCOMA
Rule 10    instruccion -> r_return PTCOMA
Rule 11    instruccion -> asignacion PTCOMA
Rule 12    instruccion -> ciclo_while PTCOMA
Rule 13    instruccion -> r_break PTCOMA
Rule 14    instruccion -> r_continue PTCOMA
Rule 15    instruccion -> struct PTCOMA
Rule 16    instruccion -> asignacion_struct PTCOMA
Rule 17    instruccion -> declaracion_array PTCOMA
Rule 18    instruccion -> imprimir
Rule 19    instruccion -> declaracion_normal
Rule 20    instruccion -> condicional_ifs
Rule 21    instruccion -> ciclo_for
Rule 22    instruccion -> funcion
Rule 23    instruccion -> llamada_funcion
Rule 24    instruccion -> r_return
Rule 25    instruccion -> asignacion
Rule 26    instruccion -> ciclo_while
Rule 27    instruccion -> r_break
Rule 28    instruccion -> r_continue
Rule 29    instruccion -> struct
Rule 30    instruccion -> asignacion_struct
Rule 31    instruccion -> declaracion_array
Rule 32    imprimir -> RCONSOLE PUNTO RLOG PARIZQ parametros_llamada PARDER
Rule 33    asignacion -> ID IGUAL expresion
Rule 34    declaracion_normal -> RLET ID DOSPUNTOS tipo IGUAL expresion
Rule 35    declaracion_normal -> RLET ID
Rule 36    declaracion_normal -> RLET ID DOSPUNTOS tipo
Rule 37    declaracion_normal -> RLET ID IGUAL expresion
Rule 38    struct -> RINTERFACE ID LLAVEIZQ parametros_struct LLAVEDER
Rule 39    asignacion_struct -> ID PUNTO parametros_asignacion_struct IGUAL expresion
Rule 40    declaracion_array -> RLET ID DOSPUNTOS tipo IGUAL CORIZQ parametros_llamada CORDER
Rule 41    declaracion_array -> RLET ID DOSPUNTOS tipo IGUAL CORIZQ CORDER
Rule 42    declaracion_array -> RLET ID IGUAL CORIZQ parametros_llamada CORDER
Rule 43    declaracion_array -> RLET ID IGUAL CORIZQ CORDER
Rule 44    funcion -> RFUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 45    funcion -> RFUNCTION ID PARIZQ parametros PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 46    llamada_funcion -> ID PARIZQ PARDER
Rule 47    llamada_funcion -> ID PARIZQ parametros_llamada PARDER
Rule 48    parametros_struct -> parametros_struct params_struct
Rule 49    parametros_struct -> params_struct
Rule 50    params_struct -> declaracion_struct PTCOMA
Rule 51    declaracion_struct -> ID DOSPUNTOS tipo IGUAL expresion
Rule 52    declaracion_struct -> ID
Rule 53    declaracion_struct -> ID DOSPUNTOS tipo
Rule 54    declaracion_struct -> ID IGUAL expresion
Rule 55    parametros_asignacion_struct -> parametros_asignacion_struct PUNTO asignacion_struct_param
Rule 56    parametros_asignacion_struct -> asignacion_struct_param
Rule 57    asignacion_struct_param -> ID
Rule 58    parametros -> parametros COMA parametro
Rule 59    parametros -> parametro
Rule 60    parametro -> RLET ID DOSPUNTOS tipo
Rule 61    parametro -> ID DOSPUNTOS tipo
Rule 62    parametro -> ID
Rule 63    parametros_llamada -> parametros_llamada COMA parametro_ll
Rule 64    parametros_llamada -> parametro_ll
Rule 65    parametro_ll -> expresion
Rule 66    expresion -> llamada_funcion
Rule 67    r_return -> RRETURN expresion
Rule 68    r_break -> RBREAK
Rule 69    r_continue -> RCONTINUE
Rule 70    condicional_ifs -> RIF condicional_if
Rule 71    condicional_if -> PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 72    condicional_if -> PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
Rule 73    condicional_if -> PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER RELSE RIF condicional_if
Rule 74    ciclo_for -> RFOR PARIZQ declaracion_normal PTCOMA expresion PTCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 75    ciclo_while -> RWHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 76    tipo -> RSTRING
Rule 77    tipo -> RNUMBER
Rule 78    tipo -> RBOOLEAN
Rule 79    expresion -> expresion MAS expresion
Rule 80    expresion -> expresion MENOS expresion
Rule 81    expresion -> expresion POR expresion
Rule 82    expresion -> expresion DIV expresion
Rule 83    expresion -> expresion IGUALDAD expresion
Rule 84    expresion -> expresion DESIGUALDAD expresion
Rule 85    expresion -> expresion MAYORQ expresion
Rule 86    expresion -> expresion MENORQ expresion
Rule 87    expresion -> expresion MAYORIGUAL expresion
Rule 88    expresion -> expresion MENORIGUAL expresion
Rule 89    expresion -> expresion AND expresion
Rule 90    expresion -> expresion OR expresion
Rule 91    expresion -> expresion POT expresion
Rule 92    expresion -> expresion MOD expresion
Rule 93    expresion -> MENOS expresion
Rule 94    expresion -> NOT expresion
Rule 95    expresion -> PARIZQ expresion PARDER
Rule 96    expresion -> expresion MAS MAS
Rule 97    expresion -> expresion MENOS MENOS
Rule 98    expresion -> ID PUNTO parametros_asignacion_struct
Rule 99    expresion -> ID
Rule 100   expresion -> RNULL
Rule 101   expresion -> RANY
Rule 102   expresion -> ENTERO
Rule 103   expresion -> DECIMAL
Rule 104   expresion -> CADENA
Rule 105   expresion -> RTRUE
Rule 106   expresion -> RFALSE

Terminals, with rules where they appear

AND                  : 89
CADENA               : 104
COMA                 : 58 63
CORDER               : 40 41 42 43
CORIZQ               : 40 41 42 43
DECIMAL              : 103
DESIGUALDAD          : 84
DIV                  : 82
DOSPUNTOS            : 34 36 40 41 51 53 60 61
ENTERO               : 102
ID                   : 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 51 52 53 54 57 60 61 62 98 99
IGUAL                : 33 34 37 39 40 41 42 43 51 54
IGUALDAD             : 83
LLAVEDER             : 38 44 45 71 72 72 73 74 75
LLAVEIZQ             : 38 44 45 71 72 72 73 74 75
MAS                  : 79 96 96
MAYORIGUAL           : 87
MAYORQ               : 85
MENORIGUAL           : 88
MENORQ               : 86
MENOS                : 80 93 97 97
MOD                  : 92
NOT                  : 94
OR                   : 90
PARDER               : 32 44 45 46 47 71 72 73 74 75 95
PARIZQ               : 32 44 45 46 47 71 72 73 74 75 95
POR                  : 81
POT                  : 91
PTCOMA               : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 50 74 74
PUNTO                : 32 39 55 98
RANY                 : 101
RBOOLEAN             : 78
RBREAK               : 68
RCONCAT              : 
RCONSOLE             : 32
RCONTINUE            : 69
RELSE                : 72 73
RFALSE               : 106
RFOR                 : 74
RFUNCTION            : 44 45
RIF                  : 70 73
RINTERFACE           : 38
RLET                 : 34 35 36 37 40 41 42 43 60
RLOG                 : 32
RNULL                : 100
RNUMBER              : 77
RRETURN              : 67
RSPLIT               : 
RSTRING              : 76
RTRUE                : 105
RWHILE               : 75
error                : 

Nonterminals, with rules where they appear

asignacion           : 11 25
asignacion_struct    : 16 30
asignacion_struct_param : 55 56
ciclo_for            : 7 21
ciclo_while          : 12 26
condicional_if       : 70 73
condicional_ifs      : 6 20
declaracion_array    : 17 31
declaracion_normal   : 5 19 74
declaracion_struct   : 50
expresion            : 33 34 37 39 51 54 65 67 71 72 73 74 74 75 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 94 95 96 97
funcion              : 8 22
imprimir             : 4 18
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 44 45 71 72 72 73 74 75
llamada_funcion      : 9 23 66
parametro            : 58 59
parametro_ll         : 63 64
parametros           : 45 58
parametros_asignacion_struct : 39 55 98
parametros_llamada   : 32 40 42 47 63
parametros_struct    : 38 48
params_struct        : 48 49
r_break              : 13 27
r_continue           : 14 28
r_return             : 10 24
struct               : 15 29
tipo                 : 34 36 40 41 51 53 60 61

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir PTCOMA
    (5) instruccion -> . declaracion_normal PTCOMA
    (6) instruccion -> . condicional_ifs PTCOMA
    (7) instruccion -> . ciclo_for PTCOMA
    (8) instruccion -> . funcion PTCOMA
    (9) instruccion -> . llamada_funcion PTCOMA
    (10) instruccion -> . r_return PTCOMA
    (11) instruccion -> . asignacion PTCOMA
    (12) instruccion -> . ciclo_while PTCOMA
    (13) instruccion -> . r_break PTCOMA
    (14) instruccion -> . r_continue PTCOMA
    (15) instruccion -> . struct PTCOMA
    (16) instruccion -> . asignacion_struct PTCOMA
    (17) instruccion -> . declaracion_array PTCOMA
    (18) instruccion -> . imprimir
    (19) instruccion -> . declaracion_normal
    (20) instruccion -> . condicional_ifs
    (21) instruccion -> . ciclo_for
    (22) instruccion -> . funcion
    (23) instruccion -> . llamada_funcion
    (24) instruccion -> . r_return
    (25) instruccion -> . asignacion
    (26) instruccion -> . ciclo_while
    (27) instruccion -> . r_break
    (28) instruccion -> . r_continue
    (29) instruccion -> . struct
    (30) instruccion -> . asignacion_struct
    (31) instruccion -> . declaracion_array
    (32) imprimir -> . RCONSOLE PUNTO RLOG PARIZQ parametros_llamada PARDER
    (34) declaracion_normal -> . RLET ID DOSPUNTOS tipo IGUAL expresion
    (35) declaracion_normal -> . RLET ID
    (36) declaracion_normal -> . RLET ID DOSPUNTOS tipo
    (37) declaracion_normal -> . RLET ID IGUAL expresion
    (70) condicional_ifs -> . RIF condicional_if
    (74) ciclo_for -> . RFOR PARIZQ declaracion_normal PTCOMA expresion PTCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (44) funcion -> . RFUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (45) funcion -> . RFUNCTION ID PARIZQ parametros PARDER LLAVEIZQ instrucciones LLAVEDER
    (46) llamada_funcion -> . ID PARIZQ PARDER
    (47) llamada_funcion -> . ID PARIZQ parametros_llamada PARDER
    (67) r_return -> . RRETURN expresion
    (33) asignacion -> . ID IGUAL expresion
    (75) ciclo_while -> . RWHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (68) r_break -> . RBREAK
    (69) r_continue -> . RCONTINUE
    (38) struct -> . RINTERFACE ID LLAVEIZQ parametros_struct LLAVEDER
    (39) asignacion_struct -> . ID PUNTO parametros_asignacion_struct IGUAL expresion
    (40) declaracion_array -> . RLET ID DOSPUNTOS tipo IGUAL CORIZQ parametros_llamada CORDER
    (41) declaracion_array -> . RLET ID DOSPUNTOS tipo IGUAL CORIZQ CORDER
    (42) declaracion_array -> . RLET ID IGUAL CORIZQ parametros_llamada CORDER
    (43) declaracion_array -> . RLET ID IGUAL CORIZQ CORDER

    RCONSOLE        shift and go to state 18
    RLET            shift and go to state 19
    RIF             shift and go to state 21
    RFOR            shift and go to state 22
    RFUNCTION       shift and go to state 23
    ID              shift and go to state 20
    RRETURN         shift and go to state 24
    RWHILE          shift and go to state 25
    RBREAK          shift and go to state 26
    RCONTINUE       shift and go to state 27
    RINTERFACE      shift and go to state 28

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    condicional_ifs                shift and go to state 6
    ciclo_for                      shift and go to state 7
    funcion                        shift and go to state 8
    llamada_funcion                shift and go to state 9
    r_return                       shift and go to state 10
    asignacion                     shift and go to state 11
    ciclo_while                    shift and go to state 12
    r_break                        shift and go to state 13
    r_continue                     shift and go to state 14
    struct                         shift and go to state 15
    asignacion_struct              shift and go to state 16
    declaracion_array              shift and go to state 17

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir PTCOMA
    (5) instruccion -> . declaracion_normal PTCOMA
    (6) instruccion -> . condicional_ifs PTCOMA
    (7) instruccion -> . ciclo_for PTCOMA
    (8) instruccion -> . funcion PTCOMA
    (9) instruccion -> . llamada_funcion PTCOMA
    (10) instruccion -> . r_return PTCOMA
    (11) instruccion -> . asignacion PTCOMA
    (12) instruccion -> . ciclo_while PTCOMA
    (13) instruccion -> . r_break PTCOMA
    (14) instruccion -> . r_continue PTCOMA
    (15) instruccion -> . struct PTCOMA
    (16) instruccion -> . asignacion_struct PTCOMA
    (17) instruccion -> . declaracion_array PTCOMA
    (18) instruccion -> . imprimir
    (19) instruccion -> . declaracion_normal
    (20) instruccion -> . condicional_ifs
    (21) instruccion -> . ciclo_for
    (22) instruccion -> . funcion
    (23) instruccion -> . llamada_funcion
    (24) instruccion -> . r_return
    (25) instruccion -> . asignacion
    (26) instruccion -> . ciclo_while
    (27) instruccion -> . r_break
    (28) instruccion -> . r_continue
    (29) instruccion -> . struct
    (30) instruccion -> . asignacion_struct
    (31) instruccion -> . declaracion_array
    (32) imprimir -> . RCONSOLE PUNTO RLOG PARIZQ parametros_llamada PARDER
    (34) declaracion_normal -> . RLET ID DOSPUNTOS tipo IGUAL expresion
    (35) declaracion_normal -> . RLET ID
    (36) declaracion_normal -> . RLET ID DOSPUNTOS tipo
    (37) declaracion_normal -> . RLET ID IGUAL expresion
    (70) condicional_ifs -> . RIF condicional_if
    (74) ciclo_for -> . RFOR PARIZQ declaracion_normal PTCOMA expresion PTCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (44) funcion -> . RFUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (45) funcion -> . RFUNCTION ID PARIZQ parametros PARDER LLAVEIZQ instrucciones LLAVEDER
    (46) llamada_funcion -> . ID PARIZQ PARDER
    (47) llamada_funcion -> . ID PARIZQ parametros_llamada PARDER
    (67) r_return -> . RRETURN expresion
    (33) asignacion -> . ID IGUAL expresion
    (75) ciclo_while -> . RWHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (68) r_break -> . RBREAK
    (69) r_continue -> . RCONTINUE
    (38) struct -> . RINTERFACE ID LLAVEIZQ parametros_struct LLAVEDER
    (39) asignacion_struct -> . ID PUNTO parametros_asignacion_struct IGUAL expresion
    (40) declaracion_array -> . RLET ID DOSPUNTOS tipo IGUAL CORIZQ parametros_llamada CORDER
    (41) declaracion_array -> . RLET ID DOSPUNTOS tipo IGUAL CORIZQ CORDER
    (42) declaracion_array -> . RLET ID IGUAL CORIZQ parametros_llamada CORDER
    (43) declaracion_array -> . RLET ID IGUAL CORIZQ CORDER

    $end            reduce using rule 1 (init -> instrucciones .)
    RCONSOLE        shift and go to state 18
    RLET            shift and go to state 19
    RIF             shift and go to state 21
    RFOR            shift and go to state 22
    RFUNCTION       shift and go to state 23
    ID              shift and go to state 20
    RRETURN         shift and go to state 24
    RWHILE          shift and go to state 25
    RBREAK          shift and go to state 26
    RCONTINUE       shift and go to state 27
    RINTERFACE      shift and go to state 28

    instruccion                    shift and go to state 29
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    condicional_ifs                shift and go to state 6
    ciclo_for                      shift and go to state 7
    funcion                        shift and go to state 8
    llamada_funcion                shift and go to state 9
    r_return                       shift and go to state 10
    asignacion                     shift and go to state 11
    ciclo_while                    shift and go to state 12
    r_break                        shift and go to state 13
    r_continue                     shift and go to state 14
    struct                         shift and go to state 15
    asignacion_struct              shift and go to state 16
    declaracion_array              shift and go to state 17

state 3

    (3) instrucciones -> instruccion .

    RCONSOLE        reduce using rule 3 (instrucciones -> instruccion .)
    RLET            reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    RINTERFACE      reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir . PTCOMA
    (18) instruccion -> imprimir .

    PTCOMA          shift and go to state 30
    RCONSOLE        reduce using rule 18 (instruccion -> imprimir .)
    RLET            reduce using rule 18 (instruccion -> imprimir .)
    RIF             reduce using rule 18 (instruccion -> imprimir .)
    RFOR            reduce using rule 18 (instruccion -> imprimir .)
    RFUNCTION       reduce using rule 18 (instruccion -> imprimir .)
    ID              reduce using rule 18 (instruccion -> imprimir .)
    RRETURN         reduce using rule 18 (instruccion -> imprimir .)
    RWHILE          reduce using rule 18 (instruccion -> imprimir .)
    RBREAK          reduce using rule 18 (instruccion -> imprimir .)
    RCONTINUE       reduce using rule 18 (instruccion -> imprimir .)
    RINTERFACE      reduce using rule 18 (instruccion -> imprimir .)
    $end            reduce using rule 18 (instruccion -> imprimir .)
    LLAVEDER        reduce using rule 18 (instruccion -> imprimir .)


state 5

    (5) instruccion -> declaracion_normal . PTCOMA
    (19) instruccion -> declaracion_normal .

    PTCOMA          shift and go to state 31
    RCONSOLE        reduce using rule 19 (instruccion -> declaracion_normal .)
    RLET            reduce using rule 19 (instruccion -> declaracion_normal .)
    RIF             reduce using rule 19 (instruccion -> declaracion_normal .)
    RFOR            reduce using rule 19 (instruccion -> declaracion_normal .)
    RFUNCTION       reduce using rule 19 (instruccion -> declaracion_normal .)
    ID              reduce using rule 19 (instruccion -> declaracion_normal .)
    RRETURN         reduce using rule 19 (instruccion -> declaracion_normal .)
    RWHILE          reduce using rule 19 (instruccion -> declaracion_normal .)
    RBREAK          reduce using rule 19 (instruccion -> declaracion_normal .)
    RCONTINUE       reduce using rule 19 (instruccion -> declaracion_normal .)
    RINTERFACE      reduce using rule 19 (instruccion -> declaracion_normal .)
    $end            reduce using rule 19 (instruccion -> declaracion_normal .)
    LLAVEDER        reduce using rule 19 (instruccion -> declaracion_normal .)


state 6

    (6) instruccion -> condicional_ifs . PTCOMA
    (20) instruccion -> condicional_ifs .

    PTCOMA          shift and go to state 32
    RCONSOLE        reduce using rule 20 (instruccion -> condicional_ifs .)
    RLET            reduce using rule 20 (instruccion -> condicional_ifs .)
    RIF             reduce using rule 20 (instruccion -> condicional_ifs .)
    RFOR            reduce using rule 20 (instruccion -> condicional_ifs .)
    RFUNCTION       reduce using rule 20 (instruccion -> condicional_ifs .)
    ID              reduce using rule 20 (instruccion -> condicional_ifs .)
    RRETURN         reduce using rule 20 (instruccion -> condicional_ifs .)
    RWHILE          reduce using rule 20 (instruccion -> condicional_ifs .)
    RBREAK          reduce using rule 20 (instruccion -> condicional_ifs .)
    RCONTINUE       reduce using rule 20 (instruccion -> condicional_ifs .)
    RINTERFACE      reduce using rule 20 (instruccion -> condicional_ifs .)
    $end            reduce using rule 20 (instruccion -> condicional_ifs .)
    LLAVEDER        reduce using rule 20 (instruccion -> condicional_ifs .)


state 7

    (7) instruccion -> ciclo_for . PTCOMA
    (21) instruccion -> ciclo_for .

    PTCOMA          shift and go to state 33
    RCONSOLE        reduce using rule 21 (instruccion -> ciclo_for .)
    RLET            reduce using rule 21 (instruccion -> ciclo_for .)
    RIF             reduce using rule 21 (instruccion -> ciclo_for .)
    RFOR            reduce using rule 21 (instruccion -> ciclo_for .)
    RFUNCTION       reduce using rule 21 (instruccion -> ciclo_for .)
    ID              reduce using rule 21 (instruccion -> ciclo_for .)
    RRETURN         reduce using rule 21 (instruccion -> ciclo_for .)
    RWHILE          reduce using rule 21 (instruccion -> ciclo_for .)
    RBREAK          reduce using rule 21 (instruccion -> ciclo_for .)
    RCONTINUE       reduce using rule 21 (instruccion -> ciclo_for .)
    RINTERFACE      reduce using rule 21 (instruccion -> ciclo_for .)
    $end            reduce using rule 21 (instruccion -> ciclo_for .)
    LLAVEDER        reduce using rule 21 (instruccion -> ciclo_for .)


state 8

    (8) instruccion -> funcion . PTCOMA
    (22) instruccion -> funcion .

    PTCOMA          shift and go to state 34
    RCONSOLE        reduce using rule 22 (instruccion -> funcion .)
    RLET            reduce using rule 22 (instruccion -> funcion .)
    RIF             reduce using rule 22 (instruccion -> funcion .)
    RFOR            reduce using rule 22 (instruccion -> funcion .)
    RFUNCTION       reduce using rule 22 (instruccion -> funcion .)
    ID              reduce using rule 22 (instruccion -> funcion .)
    RRETURN         reduce using rule 22 (instruccion -> funcion .)
    RWHILE          reduce using rule 22 (instruccion -> funcion .)
    RBREAK          reduce using rule 22 (instruccion -> funcion .)
    RCONTINUE       reduce using rule 22 (instruccion -> funcion .)
    RINTERFACE      reduce using rule 22 (instruccion -> funcion .)
    $end            reduce using rule 22 (instruccion -> funcion .)
    LLAVEDER        reduce using rule 22 (instruccion -> funcion .)


state 9

    (9) instruccion -> llamada_funcion . PTCOMA
    (23) instruccion -> llamada_funcion .

    PTCOMA          shift and go to state 35
    RCONSOLE        reduce using rule 23 (instruccion -> llamada_funcion .)
    RLET            reduce using rule 23 (instruccion -> llamada_funcion .)
    RIF             reduce using rule 23 (instruccion -> llamada_funcion .)
    RFOR            reduce using rule 23 (instruccion -> llamada_funcion .)
    RFUNCTION       reduce using rule 23 (instruccion -> llamada_funcion .)
    ID              reduce using rule 23 (instruccion -> llamada_funcion .)
    RRETURN         reduce using rule 23 (instruccion -> llamada_funcion .)
    RWHILE          reduce using rule 23 (instruccion -> llamada_funcion .)
    RBREAK          reduce using rule 23 (instruccion -> llamada_funcion .)
    RCONTINUE       reduce using rule 23 (instruccion -> llamada_funcion .)
    RINTERFACE      reduce using rule 23 (instruccion -> llamada_funcion .)
    $end            reduce using rule 23 (instruccion -> llamada_funcion .)
    LLAVEDER        reduce using rule 23 (instruccion -> llamada_funcion .)


state 10

    (10) instruccion -> r_return . PTCOMA
    (24) instruccion -> r_return .

    PTCOMA          shift and go to state 36
    RCONSOLE        reduce using rule 24 (instruccion -> r_return .)
    RLET            reduce using rule 24 (instruccion -> r_return .)
    RIF             reduce using rule 24 (instruccion -> r_return .)
    RFOR            reduce using rule 24 (instruccion -> r_return .)
    RFUNCTION       reduce using rule 24 (instruccion -> r_return .)
    ID              reduce using rule 24 (instruccion -> r_return .)
    RRETURN         reduce using rule 24 (instruccion -> r_return .)
    RWHILE          reduce using rule 24 (instruccion -> r_return .)
    RBREAK          reduce using rule 24 (instruccion -> r_return .)
    RCONTINUE       reduce using rule 24 (instruccion -> r_return .)
    RINTERFACE      reduce using rule 24 (instruccion -> r_return .)
    $end            reduce using rule 24 (instruccion -> r_return .)
    LLAVEDER        reduce using rule 24 (instruccion -> r_return .)


state 11

    (11) instruccion -> asignacion . PTCOMA
    (25) instruccion -> asignacion .

    PTCOMA          shift and go to state 37
    RCONSOLE        reduce using rule 25 (instruccion -> asignacion .)
    RLET            reduce using rule 25 (instruccion -> asignacion .)
    RIF             reduce using rule 25 (instruccion -> asignacion .)
    RFOR            reduce using rule 25 (instruccion -> asignacion .)
    RFUNCTION       reduce using rule 25 (instruccion -> asignacion .)
    ID              reduce using rule 25 (instruccion -> asignacion .)
    RRETURN         reduce using rule 25 (instruccion -> asignacion .)
    RWHILE          reduce using rule 25 (instruccion -> asignacion .)
    RBREAK          reduce using rule 25 (instruccion -> asignacion .)
    RCONTINUE       reduce using rule 25 (instruccion -> asignacion .)
    RINTERFACE      reduce using rule 25 (instruccion -> asignacion .)
    $end            reduce using rule 25 (instruccion -> asignacion .)
    LLAVEDER        reduce using rule 25 (instruccion -> asignacion .)


state 12

    (12) instruccion -> ciclo_while . PTCOMA
    (26) instruccion -> ciclo_while .

    PTCOMA          shift and go to state 38
    RCONSOLE        reduce using rule 26 (instruccion -> ciclo_while .)
    RLET            reduce using rule 26 (instruccion -> ciclo_while .)
    RIF             reduce using rule 26 (instruccion -> ciclo_while .)
    RFOR            reduce using rule 26 (instruccion -> ciclo_while .)
    RFUNCTION       reduce using rule 26 (instruccion -> ciclo_while .)
    ID              reduce using rule 26 (instruccion -> ciclo_while .)
    RRETURN         reduce using rule 26 (instruccion -> ciclo_while .)
    RWHILE          reduce using rule 26 (instruccion -> ciclo_while .)
    RBREAK          reduce using rule 26 (instruccion -> ciclo_while .)
    RCONTINUE       reduce using rule 26 (instruccion -> ciclo_while .)
    RINTERFACE      reduce using rule 26 (instruccion -> ciclo_while .)
    $end            reduce using rule 26 (instruccion -> ciclo_while .)
    LLAVEDER        reduce using rule 26 (instruccion -> ciclo_while .)


state 13

    (13) instruccion -> r_break . PTCOMA
    (27) instruccion -> r_break .

    PTCOMA          shift and go to state 39
    RCONSOLE        reduce using rule 27 (instruccion -> r_break .)
    RLET            reduce using rule 27 (instruccion -> r_break .)
    RIF             reduce using rule 27 (instruccion -> r_break .)
    RFOR            reduce using rule 27 (instruccion -> r_break .)
    RFUNCTION       reduce using rule 27 (instruccion -> r_break .)
    ID              reduce using rule 27 (instruccion -> r_break .)
    RRETURN         reduce using rule 27 (instruccion -> r_break .)
    RWHILE          reduce using rule 27 (instruccion -> r_break .)
    RBREAK          reduce using rule 27 (instruccion -> r_break .)
    RCONTINUE       reduce using rule 27 (instruccion -> r_break .)
    RINTERFACE      reduce using rule 27 (instruccion -> r_break .)
    $end            reduce using rule 27 (instruccion -> r_break .)
    LLAVEDER        reduce using rule 27 (instruccion -> r_break .)


state 14

    (14) instruccion -> r_continue . PTCOMA
    (28) instruccion -> r_continue .

    PTCOMA          shift and go to state 40
    RCONSOLE        reduce using rule 28 (instruccion -> r_continue .)
    RLET            reduce using rule 28 (instruccion -> r_continue .)
    RIF             reduce using rule 28 (instruccion -> r_continue .)
    RFOR            reduce using rule 28 (instruccion -> r_continue .)
    RFUNCTION       reduce using rule 28 (instruccion -> r_continue .)
    ID              reduce using rule 28 (instruccion -> r_continue .)
    RRETURN         reduce using rule 28 (instruccion -> r_continue .)
    RWHILE          reduce using rule 28 (instruccion -> r_continue .)
    RBREAK          reduce using rule 28 (instruccion -> r_continue .)
    RCONTINUE       reduce using rule 28 (instruccion -> r_continue .)
    RINTERFACE      reduce using rule 28 (instruccion -> r_continue .)
    $end            reduce using rule 28 (instruccion -> r_continue .)
    LLAVEDER        reduce using rule 28 (instruccion -> r_continue .)


state 15

    (15) instruccion -> struct . PTCOMA
    (29) instruccion -> struct .

    PTCOMA          shift and go to state 41
    RCONSOLE        reduce using rule 29 (instruccion -> struct .)
    RLET            reduce using rule 29 (instruccion -> struct .)
    RIF             reduce using rule 29 (instruccion -> struct .)
    RFOR            reduce using rule 29 (instruccion -> struct .)
    RFUNCTION       reduce using rule 29 (instruccion -> struct .)
    ID              reduce using rule 29 (instruccion -> struct .)
    RRETURN         reduce using rule 29 (instruccion -> struct .)
    RWHILE          reduce using rule 29 (instruccion -> struct .)
    RBREAK          reduce using rule 29 (instruccion -> struct .)
    RCONTINUE       reduce using rule 29 (instruccion -> struct .)
    RINTERFACE      reduce using rule 29 (instruccion -> struct .)
    $end            reduce using rule 29 (instruccion -> struct .)
    LLAVEDER        reduce using rule 29 (instruccion -> struct .)


state 16

    (16) instruccion -> asignacion_struct . PTCOMA
    (30) instruccion -> asignacion_struct .

    PTCOMA          shift and go to state 42
    RCONSOLE        reduce using rule 30 (instruccion -> asignacion_struct .)
    RLET            reduce using rule 30 (instruccion -> asignacion_struct .)
    RIF             reduce using rule 30 (instruccion -> asignacion_struct .)
    RFOR            reduce using rule 30 (instruccion -> asignacion_struct .)
    RFUNCTION       reduce using rule 30 (instruccion -> asignacion_struct .)
    ID              reduce using rule 30 (instruccion -> asignacion_struct .)
    RRETURN         reduce using rule 30 (instruccion -> asignacion_struct .)
    RWHILE          reduce using rule 30 (instruccion -> asignacion_struct .)
    RBREAK          reduce using rule 30 (instruccion -> asignacion_struct .)
    RCONTINUE       reduce using rule 30 (instruccion -> asignacion_struct .)
    RINTERFACE      reduce using rule 30 (instruccion -> asignacion_struct .)
    $end            reduce using rule 30 (instruccion -> asignacion_struct .)
    LLAVEDER        reduce using rule 30 (instruccion -> asignacion_struct .)


state 17

    (17) instruccion -> declaracion_array . PTCOMA
    (31) instruccion -> declaracion_array .
